--- a/Makefile.release
+++ b/Makefile.release
@@ -5,7 +5,7 @@
 # By Marcos Cruz (programandala.net)
 # http://ne.alinome.net
 
-# Last modified 202011091739
+# Last modified 202011091748
 # See change log at the end of the file
 
 # ==============================================================
@@ -21,7 +21,7 @@
 
 branch=$(book)
 
-release=$(shell grep ":revnumber:" $(version_file) | sed -e "s/:revnumber: \\+//" )
+release=v$(shell grep ":revnumber:" $(version_file) | sed -e "s/:revnumber: \\+//" )
 
 prerequisites=*.adoc target/
 
@@ -59,4 +59,5 @@ tmp/$(book)_$(release).zip:  $(prerequisites)
 
 # 2020-11-05: Start.
 #
-# 2020-11-09: Exclude the cover image, but keep its thumb version.
+# 2020-11-09: Exclude the cover image, but keep its thumb version. Add "v"
+# prefix to the release version.
